...
                      Icons.fitness_center,
                      size: fontSize * 6, 
                      color: Colors.white.withOpacity(0.5),
                    ),
                    const SizedBox(height: 16),
                    Text(
                      'No exercises selected!',
                      style: TextStyle(
                        fontSize: fontSize,
                        color: Colors.white,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
...
                      Navigator.push(
                        context,
                        MaterialPageRoute(builder: (context) => AddExercisePage()),
                      );
                    },
                    child: Text(
                      'Add Exercise',
                      style: TextStyle(
                        fontSize: fontSize * 0.9
                      ),
                      textAlign: TextAlign.center,
                    ),
                  ),
...
                    style: ElevatedButton.styleFrom(
                      backgroundColor: const Color(0xFF242b35),
                      alignment: Alignment.center,
                    ),
                    onPressed: () => showSaveDialog(),
                    child: Text(
                      'Save',
                      style: TextStyle(
                        fontSize: fontSize * 0.9
                      ),
                      textAlign: TextAlign.center,
                    ),
                  ),
...
    if (selectedExercises.isEmpty) {
      showDialog(
        context: context,
        builder: (context) => AlertDialog(
          backgroundColor: const Color(0xFF242b35),
          title: Text(
            'Please select an exercise!',
            style: TextStyle(
              color: Colors.white,
              fontWeight: FontWeight.bold,
              fontSize: fontSize,
            ),
          ),
          actions: [
            TextButton(
              onPressed: () => Navigator.pop(context),
              child: Text(
                'OK',
                style: TextStyle(
                  color: Colors.blue,
                  fontSize: fontSize * 0.9,
                ),
              ),
            ),
...
