...

  /**
   * @brief Verify that the inputs are all correctly filled
   */
  void validateInputs() {
    if (seriesController.text.isEmpty) {
      showErrorDialog('Please fill the Series input.');
      return;
    }
    if (repetitionsController.text.isEmpty) {
      showErrorDialog('Please fill the Repetitions input.');
      return;
    }
...
              style: TextStyle(color: Colors.white, fontSize: fontSize), 
              keyboardType: TextInputType.number,
              inputFormatters: [FilteringTextInputFormatter.digitsOnly],
            ),
            const Spacer(),

            // Button "Save Exercise"
            SizedBox(
              width: double.infinity,
              child: ElevatedButton(
                style: ElevatedButton.styleFrom(
                  backgroundColor: const Color(0xFF242b35),
                  alignment: Alignment.center,
...
